--- a/AnimeSite/package.json
+++ b/AnimeSite/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "nodemon": "^3.1.0",
     "postcss": "^8.4.38",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.2.0"
   }
