--- a/AnimeSite/package.json
+++ b/AnimeSite/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.3",
     "react": "^18.2.0",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3"
