--- a/AnimeSite/server/Dockerfile
+++ b/AnimeSite/server/Dockerfile
@@ -5,16 +5,16 @@ FROM node:14
 WORKDIR /app
 
 # Copy application dependency manifests to the container image.
-COPY package.json package-lock.json ./
+COPY ../package.json ../package-lock.json ./
 
 # Install dependencies
 RUN npm install
 
 # Copy local code to the container image.
-COPY . .
+COPY server/ .
 
 # Expose the port your app runs on
-EXPOSE 3000
+EXPOSE 8080
 
 # Run the web service on container startup.
-CMD ["node", "index.js"]
+CMD ["node", "server.js"]
