Fixed on local server.

--- a/AnimeSite/server/Dockerfile
+++ b/AnimeSite/server/Dockerfile
@@ -1,20 +1,15 @@
-# Use the official Node.js image
-FROM node:14
+FROM node
 
-# Create and change to the app directory
 WORKDIR /app
 
-# Copy application dependency manifests to the container image.
-COPY ../package.json ../package-lock.json ./
+COPY package*.json ./
 
-# Install dependencies
 RUN npm install
 
-# Copy local code to the container image.
-COPY server/ .
+COPY . .
 
-# Expose the port your app runs on
+ENV PORT=8080
+
 EXPOSE 8080
 
-# Run the web service on container startup.
 CMD ["node", "server.js"]
