--- a/AnimeSite/server/package.json
+++ b/AnimeSite/server/package.json
@@ -1,41 +1,25 @@
 {
-  "name": "animesite",
-  "private": true,
-  "version": "0.0.0",
+  "name": "server",
+  "version": "1.0.0",
+  "description": "An Express.js application with MySQL database connection and file upload functionality",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
+  "keywords": [],
+  "author": "udK",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.8",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.9.7",
-    "react": "^18.2.0",
-    "react-datepicker": "^6.6.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-responsive": "^10.0.0",
-    "react-router-dom": "^6.22.3"
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.4",
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "nodemon": "^3.1.0",
-    "postcss": "^8.4.38",
-    "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.2.0"
+    "nodemon": "^2.0.22"
   }
 }
