--- a/AnimeSite/server/docker-compose.yaml
+++ b/AnimeSite/server/docker-compose.yaml
@@ -1,30 +1,25 @@
-version: "3.8"
-
 services:
-  backend:
-    build:
-      context: ./
-    ports:
-      - "8080:8080"
-    depends_on:
-      - db
-    environment:
-      DB_HOST: db
-      DB_USER: root
-      DB_PASSWORD: password
-      DB_NAME: mangadb
-      DB_PORT: 3307
-
-  db:
-    image: mysql:latest
-    ports:
-      - "3307:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: mangadb
+  mysqldb:
+    image: mysql:8.0
+    container_name: mysqlcontainer
+    command: --default-authentication-plugin=mysql_native_password
+    restart: unless-stopped
     volumes:
-      - mysql-data:/var/lib/mysql
-      - ./mangadb_dump.sql:/docker-entrypoint-initdb.d/mangadb_dump.sql
+      - $HOME/database:/var/lib/mysql
+    ports:
+      - 3306:3306
+    expose:
+      - 3306
+    environment:
+      MYSQL_DATABASE: mangadb
+      MYSQL_USER: root
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: password
+      SERVICE_TAGS: dev
+      SERVICE_NAME: mysqldb
+    networks:
+      - manganet
 
-volumes:
-  mysql-data:
+networks:
+  manganet:
+    driver: bridge
